Brewer name z-index fix

--- a/front-end/src/app/beers/beers-show/beers-show.component.css
+++ b/front-end/src/app/beers/beers-show/beers-show.component.css
@@ -16,7 +16,7 @@ p {
 }
 
 #brewer-name {
-  z-index: 1000;
+  z-index: 1;
 }
 
 a {
